# logSentry

./: .gitignore  CMakeLists.txt  README.md  main.cpp
NodeSentryClient/: CMakeLists.txt  main.cpp
NodeSentryClient/config/: config.ini
NodeSentryClient/include/: Common.h  DirMonitor.h  DirMonitorWorker.h  DirNode.h  FileMonitor.h  FileMonitorWorker.h  FileNode.h  ProtoBufMsg.h
NodeSentryClient/src/app/: DirMonitor.cpp  DirMonitorWorker.cpp  DirNode.cpp  FileMonitor.cpp  FileMonitorWorker.cpp  MainCenter.cpp  NodeSentryManager.cpp  ProtoBufMsg.cpp
NodeSentryClient/src/service/: CCurl.cpp  CEpoll.cpp  CEvent.cpp  CIniFileConfig.cpp  CLock.cpp  CPoll.cpp  CProcess.cpp  CServiceLog.cpp  CSignal.cpp  CSocket.cpp  CThread.cpp  CThreadSocket.cpp  CUnixOs.cpp
NodeSentryServer/: autoload.php  run.php
NodeSentryServer/Config/develop/: config.php  db.php  es.php
NodeSentryServer/Config/product/: config.php  db.php
NodeSentryServer/Controller/: DingDingInterFace.php  LogSentryController.php  MiddleInterface.php
NodeSentryServer/Pendant/: SwooleSysSocket.php  SysAfUnixSocket.php  SysConfig.php  SysFactory.php  SysProcess.php  WebSocket.php
NodeSentryServer/Pendant/CallEvent/: Event.php  TcpEvent.php
NodeSentryServer/Pendant/Common/: Tool.php
NodeSentryServer/Pendant/ProtoInterface/: ProtoServer.php  Protocol.php
NodeSentryServer/Script/: ESScript.php
NodeSentryServer/Structural/System/: ConfigStruct.php  EventStruct.php  LogDbStruct.php  LogProtocol.php  LogSentryStruct.php  OnEventTcpStruct.php  SwooleProtocol.php  SwooleTcpStruct.php
NodeSentryWeb/: bootstrap.php  index.php  test.sql
NodeSentryWeb/App/Config/: Config.php  ConstVar.php  DB.php  DingDing.php  Router.php
NodeSentryWeb/App/Controller/: DingDingConfig.php  Index.php
NodeSentryWeb/App/Model/: clientModel.php  nodeSentryModel.php  projectModel.php  syslogModel.php  userModel.php
NodeSentryWeb/Common/: Function.php
NodeSentryWeb/Core/: InjectObject.php
NodeSentryWeb/Public/css/: perfect-scrollbar.css  ploceidae.css
NodeSentryWeb/Public/fonts/: iconfont.eot
NodeSentryWeb/Public/js/: jquery.min.js
NodeSentryWeb/Public/less/: alerts.less  boxes.less  breadcrumbs.less  button-groups.less  buttons.less  code.less  core.less  custom.less  default-theme.less  dingfeng.less  dropdown.less  dropdowns.less  fengruxian.less  forms.less  (+31 more)
NodeSentryWeb/System/: BaseInterface.php  Container.php  FactoryController.php  FactoryModel.php  SuperFactory.php
config/: config.ini
include/: CSocket.h  CThread.h  Common.h  Config.h  DirMonitor.h  DirMonitorWorker.h  DirNode.h  FileMonitor.h  FileMonitorManager.h  FileMonitorWorker.h  FileNode.h  IniFileConfig.h  Lock.h  MainCenter.h  MainService.h  NodeSentry.h  NodeSentryManager.h  ProtoBuf.h  ProtoBufMsg.h
run/: run.pid
src/app/: Config.cpp  DirMonitor.cpp  DirMonitorWorker.cpp  DirNode.cpp  FileMonitor.cpp  FileMonitorController.cpp  FileMonitorManager.cpp  FileMonitorWorker.cpp  FileNode.cpp  MainCenter.cpp  NodeSentry.cpp  NodeSentryManager.cpp  ProtoBuf.cpp  ProtoBufMsg.cpp
src/service/: CEpoll.cpp  CEvent.cpp  CIniFileConfig.cpp  CLock.cpp  CPoll.cpp  CProcess.cpp  CServiceLog.cpp  CSignal.cpp  CSocket.cpp  CStringBuffer.cpp  CThread.cpp  CThreadSocket.cpp  CUnixOs.cpp  Config.cpp  IniFileConfig.cpp  Lock.cpp  ServiceLog.cpp
unitTest/: TestCEpoll.cpp
(+94 files in other folders)
